# xmonad-tanish2002

./: .gitignore  build  flake.nix  xmonad-tanish2002.cabal
dist-newstyle/cache/: config
src/: xmonad.hs
src/Apps/: Alias.hs  Scratchpad.hs
src/Bind/: KeyBoard.hs  Mouse.hs
src/Config/: Options.hs
src/Container/: Layout.hs
src/Hooks/: EventHook.hs  LogHook.hs  ManageHook.hs
